# faang-cobalt-video-downloader

./: .env.example  CONTRIBUTING.md  README.md  docker-compose.yml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/download/: route.ts
