[package]
name = "faang-cobalt-video-downloader-backend"
version = "0.1.0"
edition = "2021"
description = "Download any social media video - Backend API"
authors = ["JJ-Dynamite"]
license = "MIT"
repository = "https://github.com/JJ-Dynamite/faang-cobalt-video-downloader"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"
